# dots.tts.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  amp_pair0_a1.npy  amp_pair0_a2.npy  amp_pair0_c1.npy  amp_pair0_c2.npy  amp_pair1_a1.npy  amp_pair1_a2.npy  amp_pair1_c1.npy  amp_pair1_c2.npy  amp_pair2_a1.npy  amp_pair2_a2.npy  amp_pair2_c1.npy  amp_pair2_c2.npy  ref_actpost.npy  ref_convpost.npy  ref_convpre.npy  ref_milayer.npy  ref_postproj.npy  ref_stage0_amp.npy  ref_stage0_rb0.npy  ref_stage0_rb1.npy  ref_stage0_rb2.npy  ref_stage0_ups.npy  ref_stage1_amp.npy  ref_stage1_rb0.npy  ref_stage1_rb1.npy  ref_stage1_rb2.npy  ref_stage1_ups.npy  ref_stage2_amp.npy  ref_stage2_rb0.npy  ref_stage2_rb1.npy  ref_stage2_rb2.npy  ref_stage2_ups.npy  ref_stage3_amp.npy  ref_stage3_rb0.npy  ref_stage3_rb1.npy  ref_stage3_rb2.npy  (+15 more)
attic/: dit.cpp  flow_matching.cpp  gguf_loader.cpp  llm_test.cpp  main.cpp
docs/: cpp_tts_ecosystem.md  decoder_history.md  dots_tts_research.md  kandinsky_vae.md  koboldcpp_research.md  large_model_hidden.md  llm_1536_candidates.md  new_models_hidden.md
include/: ar_data.h  audiovae.h  audiovae_encoder.h  bigvgan_cpp.h  blas_linear.h  campp.h  dit.h  dit_dump.h  dit_eos.h  dit_manual.h  dots_tts.h  dots_tts_util.h  gpt2_bpe_tokenizer.h  llm_manual.h  manual_linear_blas.h  mt19937.h  noise64.h  noise_data.h  noise_data_pipeline.h  noise_data_real.h  noise_data_v4.h  patchenc.h  safetensors.h  speaker_embedding.h  zig_normal.h
models/: convert_dots_tts.py  debug_dump.py  decode_latents.py  dump_amp.py  export_eff_vocoder.py  export_eff_vocoder2.py  export_eff_weights.py  export_enc_det.py  extract_dots_llm.py  extract_dots_llm_v2.py  extract_llm_gguf.py  hybrid_tts.py  snapshot  tok.py  token_vocab.txt  vocoder_bridge.py
src/: dit_libtorch.h  e2e_pipeline.cpp  e2e_pipeline_v4.cpp  gguf_extract.cpp  gguf_loader.cpp  gpt2_bpe_tokenizer.cpp  llm_manual.cpp  llm_test.cpp  main.cpp
src/modules/backbone/: dit.cpp  dit_attention.cpp  dit_forward.cpp  flow_matching.cpp  patchenc.cpp
src/modules/speaker/: campp.cpp
src/modules/vocoder/: audiovae.cpp  audiovae_encoder.cpp  bigvgan_cpp.cpp  lstm.cpp
src/utils/: dit_loader.cpp  patchenc_loader.cpp  safetensors.cpp  vae_stats.h
test/: test_18blocks.cpp  test_attn_calib.cpp  test_attn_cmp.cpp  test_bigvgan_cmp.cpp  test_blas_linear.cpp  test_blk_trace.cpp  test_bn.cpp  test_bottleneck.cpp  test_bv_cmp2.cpp  test_bv_dump.cpp  test_bv_full.cpp  test_bv_pylatents.cpp  test_bv_quick.cpp  test_bv_rb.cpp  test_bv_stage.cpp  test_calibrate_bigvgan.cpp  test_campp.cpp  test_clean_cmp.cpp  test_cond_cmp.cpp  test_conv_debug.cpp  test_conv_pre.cpp  test_coord_cmp.cpp  test_cp.cpp  test_cp2.cpp  test_dit_calibrate.cpp  test_dit_compare.cpp  test_dit_tvals.cpp  test_encoder.cpp  test_encoder_cmp.cpp  test_fbank.cpp  test_ffn_cpp.cpp  test_full_cmp.cpp  test_full_dit.cpp  test_kv_cache_correctness.cpp  test_kv_step.cpp  test_leaf_mul.cpp  test_llm.cpp  test_lt_debug.cpp  test_lt_dit.cpp  test_lt_full.cpp  (+17 more)
tools/: analyze_ode.py  capture_latents.py  cmp_bv_stages.py  cmp_velocity.py  compare_pipelines.py  dump_amp0_py.py  dump_attn_py.py  dump_attn_real.py  dump_bv_stages.py  dump_bv_stages_py.py  dump_dit_py.py  dump_ffn_py.py  dump_full_dit.py  trace_blocks.py  unified_dump.py  verify_bv.py  web_demo.py  web_server.cpp
